# GreedySnake

./: .gitignore  CMakeLists.txt  GreedySnake.pro  README.md  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathfinding.cpp  pathfinding.h  square.cpp  square.h
